--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.12.10",
     "next": "13.2.4",
+    "particles.js": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3"
