--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "particles.js": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "typescript": "5.0.3"
   },
   "devDependencies": {
